[Test] Migrate tests for java 15 to regular test infrastructure